2008-07-18  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        Fix assertion about creating Length values with percentage types
        when blending transforms.
        https://bugs.webkit.org/show_bug.cgi?id=20086


Canonical link: https://commits.webkit.org/27669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35238 268f45cc-cd09-0410-ab3c-d52691b4dbfc